Fix slider show images not resize on mobiles

--- a/less/main.less
+++ b/less/main.less
@@ -68,7 +68,7 @@
     height: 400px;
   }
 
-  .slider img {
+  .slider-mask img {
     width: 640px;
     height: 400px;
   }
@@ -115,7 +115,7 @@
     height: 400px / @md;
   }
 
-  .slider img {
+  .slider-mask img {
     width: 640px / @md;
     height: 400px / @md;
   }
@@ -162,7 +162,7 @@
     height: 400px / @sm;
   }
 
-  .slider img {
+  .slider-mask img {
     width: 640px / @sm;
     height: 400px / @sm;
   }
